3.4.3/_sources/gallery/text_labels_and_annotations/multiline.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/text_labels_and_annotations/multiline.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_text_labels_and_annotations_multiline.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_multiline.py:


=========
Multiline
=========

.. GENERATED FROM PYTHON SOURCE LINES 7-46



.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_multiline_001.png
    :alt: test line spacing for multiline text
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(7, 4))

    ax0.set_aspect(1)
    ax0.plot(np.arange(10))
    ax0.set_xlabel('this is a xlabel\n(with newlines!)')
    ax0.set_ylabel('this is vertical\ntest', multialignment='center')
    ax0.text(2, 7, 'this is\nyet another test',
             rotation=45,
             horizontalalignment='center',
             verticalalignment='top',
             multialignment='center')

    ax0.grid()


    ax1.text(0.29, 0.4, "Mat\nTTp\n123", size=18,
             va="baseline", ha="right", multialignment="left",
             bbox=dict(fc="none"))

    ax1.text(0.34, 0.4, "Mag\nTTT\n123", size=18,
             va="baseline", ha="left", multialignment="left",
             bbox=dict(fc="none"))

    ax1.text(0.95, 0.4, "Mag\nTTT$^{A^A}$\n123", size=18,
             va="baseline", ha="right", multialignment="left",
             bbox=dict(fc="none"))

    ax1.set_xticks([0.2, 0.4, 0.6, 0.8, 1.])
    ax1.set_xticklabels(["Jan\n2009", "Feb\n2009", "Mar\n2009", "Apr\n2009",
                         "May\n2009"])

    ax1.axhline(0.4)
    ax1.set_title("test line spacing for multiline text")

    fig.subplots_adjust(bottom=0.25, top=0.75)
    plt.show()


.. _sphx_glr_download_gallery_text_labels_and_annotations_multiline.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: multiline.py <multiline.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: multiline.ipynb <multiline.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
